2005-11-04 Niklas Knutsson  <nq@altern.org>

	* Compile without warnings with -pedantic and -Wextra

2005-11-03 Niklas Knutsson  <nq@altern.org>

	* Fix simplification of (ax^b+cx^d)/x
	* Fix (xy/z)+1/z
	* Fix suggested multiplication sign before and after power

2005-11-02 Niklas Knutsson  <nq@altern.org>
	
	* More parse polishing
	* Fix for cln-1.1.10 and remove all "obfuscating" cln operators
	* Builtin function's represents...() was not used because of missing const in declaration

2005-10-31 Niklas Knutsson  <nq@altern.org>

	* Cleaner parsing (same result but looks nicer)

2005-10-30 Niklas Knutsson  <nq@altern.org>

	* Add metre/metres for meter/meters
	* nounit() function

2005-10-29 Niklas Knutsson  <nq@altern.org>

	* Fix Kibit interpretation (was kibitonne, is now kibibit) and similar
	* Update setting of parsed structure and to expression in calculate function
	* Update qalc

2005-10-28 Niklas Knutsson  <nq@altern.org>

	* Option to reduce transformation when parsing and print formating
	* Support for binary and other prefixes
	* Information units (bit, byte, etc.) and binary prefixes
	* Neper and Bel units

2005-10-26 Niklas Knutsson  <nq@altern.org>

	* Update Swedish translation
	* light_year => lightyear
	* Fix unended function information when optional arguments

2005-10-22 Niklas Knutsson  <nq@altern.org>

	* Add SIGN_SMALLCIRCLE and SIGN_MULTIBULLET to utf8_pos_is_valid_in_name to fix completion

2005-10-21 Niklas Knutsson  <nq@altern.org>

	* Lots of new units

2005-10-20 Niklas Knutsson  <nq@altern.org>

	* Only give "Error in unit expression" message on errors in CompositeUnit parsing
	* Do not accumulate the error count between levels for temporary stop messages

2005-10-19 Niklas Knutsson  <nq@altern.org>

	* Add arguments past max arguments to unended_function

2005-10-18 Niklas Knutsson  <nq@altern.org>

	* Put seperation of unit expression to string in calculate function in a separate function
	* Add stopped warnings count
